Fixed a scrollbar styling bug (I forgot about windows, and also some styles were interfering), and finally traced down a bug causing tree deletion whenever a page redirected you somewhere.

--- a/scss/injector_style.scss
+++ b/scss/injector_style.scss
@@ -37,6 +37,7 @@ $link-right-margin: 7px;
 	visibility: hidden;
 	width: $frame-width;
 	background-color: $frame-color;
+	overflow: hidden;
 
 	#shrub-title-bar {
 		width: 100%;
@@ -68,7 +69,8 @@ $link-right-margin: 7px;
 		min-height: $link-height;
 		background-color: $browser-color;
 		border-radius: $frame-radius;
-		overflow: scroll;
+		overflow-y: scroll;
+		overflow-x: hidden;
 		direction: rtl;
 
 		.shrub-browser-link {
@@ -108,5 +110,10 @@ $link-right-margin: 7px;
 	* {
 		padding: 0px;
 		margin: 0px;
+	}
+
+	::-webkit-scrollbar {
+		background: transparent;
+		width: 0px;
 	}
 }
